Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9276

[REG] lupdate: QT_TR_NOOP in static initializers broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0
    • 4.6.0
    • Tools: Linguist
    • None
    • d758d652e1b3950f9df6aa4c1bdef67ba9b88b15,30b07c744f980c46ea8dac5c68bb0b94eb070323

    Description

      using QT_TR_NOOP in static initializers does not wok any more. lupdate complains that tr() cannot be used without a context.

      Attachments

        1. main.cpp
          0.2 kB
        2. patch.diff
          2 kB
        3. translationtest.zip
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes