make QT_TR_NOOP work in static initializers

do that by ignoring all equal signs and everything between and
including brackets. this makes static initializers look
effectively like function definitions, thus creating proper
context.

Task-number: QTBUG-9276